--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>Cronômetro</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1 id="cronometro">00:00:00</h1>
         <div class="botoes">            
             <button class="botao-iniciar" onclick="start()">Iniciar</button>
